--- a/idea1.css
+++ b/idea1.css
@@ -5,6 +5,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: #cddde5;
+}
 .bar {
     display: flex;
     align-items: center;
@@ -238,5 +241,22 @@ html{
   /* Show menu when class 'show' is added */
   .dropdown-menu.show {
     display: flex;
+  }
+  .section2 {
+    height:1000px ;
+    background-color: #cddde5;
+  }
+  .heading{
+    justify-content: center;
+    margin-left: 45%;
+    background-color: #cddde5;
+  }
+  .ruler{
+    width: 80%;
+    height: 0px;
+    color: black;
+    margin-left: 10%;
+    border: solid 0.6px black;
+    border-radius: 100%;
   }
 
