--- a/idea1.css
+++ b/idea1.css
@@ -224,14 +224,15 @@ html{
     left: 0;
     width: 10%;
     z-index: 1;
-    border: black solid 2px;
+    border: black solid 1px;
+    border-top:0px ;
   }
 
   .dropdown-menu a {
     padding: 12px 20px;
     text-decoration: none;
     color: black;
-    border-top: 1px solid #444;
+    border-top: 0.2px solid #444;
   }
 
   .dropdown-menu a:hover {
